tests/unsatisfiable/UnsatisfiableFail1.stderr

UnsatisfiableFail1.hs:12:12: error: [GHC-22250]
    • Cannot call 'uncallable'.
    • In the expression: uncallable
      In an equation for ‘rejected’: rejected = uncallable
